--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
+    "universal-cookie": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +48,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.26.1"
+    "daisyui": "^4.12.10",
+    "react-router-dom": "^6.26.1",
+    "tailwindcss": "^3.4.10"
   }
 }
